tests/string/string_parse_errors.err.expected
error: at 20:9: [PARSE-InvalidLiteral] In function 'unknown_escape', block 'entry': unknown escape sequence: \q
    |
 20 |     s = b"\q";
    |         ^^^^^
